--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "jquery": "^3.5.1",
     "mongoose": "^5.10.8",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
