--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.7.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "element-closest": "^3.0.2",
