--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-closest": "^3.0.2",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
+    "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "mongoose": "^5.10.8",
