--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.5.1",
     "mongoose": "^5.10.8",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
