--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "gridfs-stream": "^1.1.1",
+    "gsap": "^3.5.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "mongoose": "^5.10.8",
