--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "element-closest": "^3.0.2",
     "express": "^4.16.4",
@@ -21,9 +23,11 @@
     "gsap": "^3.5.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
+    "jsonparser": "^1.0.1",
     "mongoose": "^5.10.8",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
